<resources>
    <string name="app_name">Project</string>

    <string name="Title">HandyConnect</string>
    <string name="DescriptionText">Connecting you with trusted local experts!</string>
    <string name="LoginBtn">Login</string>
    <string name="SignUpText">Do not have an account? Sign Up</string>

    <string name="SignInTitle">Sign In</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">Password</string>

    <string name="SignUpTitle">Sign Up</string>

    <string name="Review">Type your review here. \n\nPlease mention his work and punctuality</string>

    <string name="select_user_type">Select User Type</string>
    <string-array name="user_types">
        <item>Select User Type</item>
        <item>Worker</item>
        <item>Seeker</item>
    </string-array>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="history_filters">
        <item>All</item>
        <item>Last 7 Days</item>
        <item>Most Viewed</item>
    </string-array>


</resources>